# pocketclawd

./: .dockerignore  .env.sample  .eslintignore  .gitignore  .gitleaks.toml  .npmrc  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DOCUMENTATION.md  Dockerfile.orchestrator  PRD.md  PRODUCT.md  README.md  README_ja.md  README_zh.md  TECH_DEBT_AUDIT.md  TECH_DEBT_REMEDIATION.md  azure.yaml  commitlint.config.cjs  docker-compose.yml  eslint.config.js  final-deploy.json  gyp.tmp.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts  x.tmp.txt
container/sub-agent/: Dockerfile  Dockerfile.production  pyproject.toml
container/sub-agent/src/: __init__.py  commands.py  config.py  consent.py  draft_artifacts.py  indexer.py  main.py  rate_limiter.py  redis_keys.py  reminders.py  slide_generator.py  url_ingestion.py
container/sub-agent/tests/: __init__.py  test_bedrock_fallback_chain.py  test_bedrock_vision.py  test_chunking_property.py  test_commands.py  test_commands_draft.py  test_commands_j_wave.py  test_consent.py  test_discovery_skill.py  test_document_commands.py  test_document_processor.py  test_embedding_pipeline.py  test_escalation.py  test_escalation_property.py  test_image_gen.py  test_indexer_move.py  test_main.py  test_preference_probe.py  test_preference_probe_property.py  test_rag_pipeline_cache.py  test_rag_retrieval.py  test_rate_limiter.py  test_routing_echo_regression.py  test_score_combination_property.py  test_slide_generator.py  test_url_ingestion.py  test_web_search.py  test_webhook_token_property.py
(+482 files in other folders)
