[project]
name = "nanoclaw-sub-agent"
version = "0.1.0"
description = "NanoClaw per-user sub-agent — FastAPI service for message processing, RAG, and document ingestion"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn==0.34.*",
    "boto3==1.35.*",
    "redis==5.2.*",
    "pydantic==2.10.*",
    "pydantic-settings>=2.6",
    "tiktoken>=0.7",
    "PyPDF2>=3.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "reportlab>=4.2",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "pillow-heif>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "fakeredis>=2.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
